Colaboratory を使用して作成しました

--- a/kadai_013.ipynb
+++ b/kadai_013.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9+rA5K0yI7JdVEnVzaSzP",
+      "authorship_tag": "ABX9TyPG/FXewbHh1YxCF30cf8Mb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +30,8 @@
       "cell_type": "code",
       "source": [
         "def calculate_total(price,consumption_tax):\n",
-        "  total=price*(1+consumption_tax)\n",
-        "  print(f\"{total}円\")\n",
+        "  return price*(1+consumption_tax)\n",
+        "  print(calculate_total)\n",
         "calculate_total(1200,0.1)"
       ],
       "metadata": {
@@ -39,16 +39,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PmZAhNVF6f80",
-        "outputId": "59ddebd6-e9f9-4271-9283-5c3dcf8d67a9"
+        "outputId": "15d41350-1b16-4d60-d6b2-a17a6f1bc710"
       },
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1320.0円\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1320.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     }
