Colaboratory を使用して作成しました

--- a/python_excel_kadai1.ipynb
+++ b/python_excel_kadai1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYiRPSykNQM1WbN43E0NGy",
+      "authorship_tag": "ABX9TyOJeNMLTYmUIFK4HRYT659T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "O85CL62KN0Mi"
       },
@@ -49,7 +49,7 @@
         "sheet['F4'].value='No.'\n",
         "sheet['G4'].value='0001'\n",
         "sheet['F5'].value='日付'\n",
-        "sheet['F6']=today.strftime('%Y%m%d')\n",
+        "sheet['G5']=today.strftime('%Y%m%d')\n",
         "sheet['C11']=2\n",
         "sheet['C12']=1\n",
         "sheet['D11']=10000\n",
