Colaboratory を使用して作成しました

--- a/Chapter9.ipynb
+++ b/Chapter9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOE5J0URlKmclNNran7k2JH",
+      "authorship_tag": "ABX9TyOdTYtpI6qirtBFXjWtsG0U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,9 +40,9 @@
         "df['平均売上']=df['売上'].mean()\n",
         "def performance(level):\n",
         "  result='';\n",
-        "  if level>200:\n",
+        "  if level>=df['売上'].mean()+50:\n",
         "    result='A';\n",
-        "  elif level==200:\n",
+        "  elif level>=df['売上'].mean():\n",
         "    result='B';\n",
         "  else:\n",
         "    result='C';\n",
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "DM5CI5YvedKM"
       },
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": []
     },
     {
