Colaboratory を使用して作成しました

--- a/python_excel_kadai3.ipynb
+++ b/python_excel_kadai3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlWpOiXOOb8IpH7YouT/AI",
+      "authorship_tag": "ABX9TyN2PABRFO8dIA+0X/Y7nZ8B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 4,
       "metadata": {
         "id": "UuHZXihSmTyK"
       },
@@ -40,13 +40,13 @@
         "file_list=['2022_年間売上表.xlsx','2023_年間売上表.xlsx']\n",
         "df=pd.DataFrame()\n",
         "for file_name in file_list:\n",
-        "  temp_df=pd.read_excel(file_name,header=None)\n",
+        "  temp_df=pd.read_excel(file_name,header=0)\n",
         "  temp_df.dropna()\n",
         "  temp_df.columns=['売上年','商品','金額（千円）']\n",
         "  df=pd.concat([df,temp_df],ignore_index=False)\n",
         "  df.to_excel('combined_data.xlsx',index=False)\n",
         "concatenated_data=pd.read_excel('combined_data.xlsx')\n",
-        "grouped_data=concatenated_data.groupby(['売上年','商品'])['金額（千円）'].sum().reset_index()\n",
+        "grouped_data=concatenated_data.groupby(['商品','売上年'])['金額（千円）'].sum().reset_index()\n",
         "grouped_data.to_excel('売上集計表.xlsx',index=False)\n",
         "workbook=openpyxl.load_workbook('売上集計表.xlsx')\n",
         "sheet=workbook.active\n",
